[package]
name = "audio_core"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "audio_core"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.100"
numpy = "0.27.1"
pyo3 = { version = "0.27.0", features = ["extension-module"] }
rubato = "1.0.0"
rustfft = "6.4.1"
symphonia = { version = "0.5.5", features = ["all", "opt-simd"] }
