[build-system]
requires = ["maturin>=1.11,<2.0"]
build-backend = "maturin"

[project]
name = "audio_core"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "demucs>=4.0.1",
    "librosa>=0.11.0",
    "matplotlib>=3.7.5",
    "numpy>=1.24.4",
    "scipy>=1.10.1",
    "soundfile>=0.13.1",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
]

[dependency-groups]
dev = [
    "pre-commit>=3.5.0",
]
